@@ -7,6 +7,7 @@
 ** add a extra +\n+ after captions
 ** add a extra +.+ after table attributes
 ** change +<code>+ to +bc..+
+* l/r/t/bgroup in org export
 
 2010/07/08
 ~~~~~~~~~~
